# Coursera_ADS_capstone

./: .gitignore  LICENSE  README.md  pyproject.toml
app/src/: config.py
app/src/common/: utils.py
app/src/core/: manager.py
app/src/models/: architecture.py
models/: best_net
notebooks/: 1_exploration.ipynb  2_etl.ipynb  3_model.ipynb  4_product.ipynb
test/: test_functions.py
