[tool.poetry]
name = "fb_impact"
version = "0.1.0"
description = "Short description of the project and the package"
authors = ["JB"]
license = "MIT"
homepage = ""
repository = ""
documentation = ""

classifiers = [
    "Topic :: Base",
    "Topic :: Project",
    "Topic :: Template",
]


[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "1.21"
pytest = "^6.2.5"
requests = "^2.26.0"
pyaml = "^21.8.3"
pandas = "^1.3.3"
Unidecode = "^1.3.2"
python-dotenv = "^0.20.0"
pydantic = "^1.9.0"
ipykernel = "^6.21.1"
seaborn = "^0.12.2"
jsonlines = "^3.1.0"
scipy = "^1.10.0"
fastparquet = "^2023.2.0"
scikit-learn = "^1.2.1"
torch = "^1.13.1"
loguru = "^0.6.0"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^23.3.0"}

[tool.poetry.dev-dependencies]
flake8 = "^5"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"
flake8-bandit = "^4"
autopep8 = "^1.5.7"
pylint = "^2.8.2"
bandit = "^1.7.0"
autoflake = "^1.3.1"
pytest-cov = "^2.8.1"
ipython = "^7.28"
commitizen = "^2.20.0"
jupyter = "^1.0.0"
mypy = "0.982"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry-core=1.3"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "functions: mark test for the base functionalities",
    "core: all about the core",
    "db: all about the database",
    "api: all about the api of the system",
]

[[tool.poetry.source]]
name = "pypi.org"
url = "https://pypi.org/simple"
default = true